# Genesis

./: .api_key.sh  .gitignore  AGENTS.md  CLAUDE.md  DETAILED_DEVELOPMENT_PLAN.md  ENGINEERING_AUDIT.md  HYDRA_USAGE.md  README.md  REFACTORING_SUMMARY.md  SOCIETY_DEVELOPMENT_IMPROVEMENTS.md  TRINITY_IMPROVEMENTS.md  analys.md  export_simulation_data.py  index.html  main.py  performance.md  plan.md  pyproject.toml  real_simulation_data.json  run_simple_web_simulation.py  run_web_simulation.py  run_with_web_export.py  sociology_simulation_mvp.py  sociology_simulation_web_ui.html  styles.css  test_trinity_improvements.py  test_trinity_simple.py  w1_feedback.md
api/: world-api.md
docs/: README.md  rewrite_implementation_plan.md  rewrite_team_wbs_three_engineers.md  snapshot_v1.md  websocket_monitor.md
genesis_old/: README.md  SIMULATION_IMPROVEMENTS.md  WEB_UI_QUICKSTART.md  test_food_consumption.py  test_trinity_observe_adjust.py  test_web_ui.py  web_ui_data.json
refactor/: CLAUDE.md  REFACTOR_PLAN.md
scripts/: bench_offline.py  bench_online.py  demo_refactored_features.py  reorg_repo.sh  run_web_simulation.py
sociology_simulation/: __init__.py  agent.py  bible.py  config.py  cultural_memory.py  enhanced_llm.py  llm.py  log_parser.py  main.py  output_formatter.py  prompts.py  terrain_generator.py  trinity.py  web_export.py  web_monitor.py  world.py
web_data/: final_simulation_data.json  simulation_turn_000.json  simulation_turn_001.json  simulation_turn_002.json  simulation_turn_003.json  simulation_turn_004.json  simulation_turn_005.json  (+235 more)
web_ui/: control.html  (+1 more)
(+247 files in other folders)
