[project]
name = "genesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.12.13",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "openai>=1.93.0",
    "hydra-core>=1.3.0",
    "numpy>=1.24.0",
    "websockets>=12.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
